--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 
 python = "^3.11"
-mypy = "^0.982"
-fastapi = "^0.86.0"
+mypy = "^0.991"
+fastapi = "^0.87.0"
+websockets = "^10.4"
 
 [build-system]
 requires = ["poetry-core"]
