--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 mypy = "^0.991"
 fastapi = "^0.87.0"
 websockets = "^10.4"
+pylint = "^2.15.7"
 
 [build-system]
 requires = ["poetry-core"]
