--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ mypy = "^0.991"
 fastapi = "^0.87.0"
 websockets = "^10.4"
 pylint = "^2.15.7"
-typer = "^0.7.0"
+typer = {extras = ["all"], version = "^0.7.0"}
 
 [build-system]
 requires = ["poetry-core"]
