--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.87.0"
 websockets = "^10.4"
 pylint = "^2.15.7"
 typer = {extras = ["all"], version = "^0.7.0"}
+watchfiles = "^0.18.1"
 
 [build-system]
 requires = ["poetry-core"]
