--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ websockets = "^10.4"
 pylint = "^2.15.7"
 typer = {extras = ["all"], version = "^0.7.0"}
 watchfiles = "^0.18.1"
+textual = "^0.7.0"
 
 [build-system]
 requires = ["poetry-core"]
